# arch_lab

./: .gitignore  CMakeLists.txt  FooEngine.cpp  README.md  client.cpp  client_get.py  client_post.py  idealnaya_arch.cpp  main.cpp  server.cpp  server.py  test.cpp
